@@ -715,7 +715,7 @@ Public CGI Scripts
     <epp:phrase id="cgi/register:no_web_signup"><p>Registration is not enabled on this system.</p></epp:phrase>
     <epp:phrase id="cgi/register:intro">
 <p>In order to access some areas of the repository, you'll need a <em>user registration</em>. No charge is made for registering with us or using any of our services.</p>
-<p>This page lets you register with <epc:phrase ref="archive_name" />. This will allow you to save searches, recieve alerts and deposit items.</p>
+<p>This page lets you register with <epc:phrase ref="archive_name" />. This will allow you to save searches, receive alerts and deposit items.</p>
 <p>Your new password  will need to confirm your email address by using a code which will be mailed to you.</p>
 <p>If you have already registered but have forgotten your username or password, <a href="reset_password">click here</a> to set a new password.</p>
 </epp:phrase>
@@ -926,7 +926,7 @@ Titles and Help for the System Fields
     <epp:phrase id="document_fieldname_formatdesc">Description</epp:phrase>
     <epp:phrase id="document_fieldhelp_formatdesc">You may offer an additional brief description of the format.</epp:phrase>
     <epp:phrase id="document_fieldname_security">Visible to</epp:phrase>
-    <epp:phrase id="document_fieldhelp_security">Please indicate the required "security level" of this document. Who is allowed to download it?</epp:phrase>
+    <epp:phrase id="document_fieldhelp_security">Please indicate the required "security level" of this document. Who is allowed to download it?  If you set this to anything other than "anyone" then consider adding a contact email for this eprint (on the next page), this will allow users to use a web form to request a copy of the document, and you can decide on a case-by-case basis.</epp:phrase>
     <epp:phrase id="document_fieldname_license">License</epp:phrase>
     <epp:phrase id="document_fieldhelp_license">Specify an explicit license for this document (does not effect the access rights you grant at the end of this deposit process). This repository allows <a href="http://creativecommons.org/about/licenses/" target="_blank">Creative Commons</a> licenses.</epp:phrase>
     <epp:phrase id="document_fieldname_date_embargo">Embargo expiry date</epp:phrase>
@@ -1161,7 +1161,7 @@ Titles and Help for the System Fields
 
     <epp:phrase id="Plugin/Screen/User/SavedSearches:title">Saved searches</epp:phrase>
     <epp:phrase id="Plugin/Screen/User/SavedSearches:description">View and configure saved searches</epp:phrase>
-    <epp:phrase id="Plugin/Screen/User/SavedSearches:intro"><p>You may view your saved searches and request to recieve a periodic email update if anything in the search changes.</p></epp:phrase>
+    <epp:phrase id="Plugin/Screen/User/SavedSearches:intro"><p>You may view your saved searches and request to receive a periodic email update if anything in the search changes.</p></epp:phrase>
     <epp:phrase id="Plugin/Screen/User/SavedSearches:no_searches"><p>You currently have no saved searches.</p></epp:phrase>
 
     <epp:phrase id="Plugin/Screen/User/SavedSearch/Edit:title">Settings</epp:phrase>
